--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ai": "2.2.16",
     "chance": "^1.1.8",
     "date-fns": "^2.29.2",
+    "eventsource": "^2.0.2",
     "got": "^11.0.0",
     "lodash": "^4.17.21",
     "openai": "^4.12.3",
@@ -26,6 +27,7 @@
     "@textshq/eslint-config": "https://github.com/TextsHQ/eslint-config#main",
     "@types/chance": "^1.1.3",
     "@types/eslint": "^8.4.10",
+    "@types/eventsource": "^1.1.15",
     "@types/lodash": "^4.14.184",
     "@types/node": "^18.7.13",
     "@types/react": "^17.0.43",
