add local persistence with drizzle + sqlite. add ability to delete threads. Allow ability to create multiple threads for the same model. Still needs testing.

--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   "scripts": {
     "prepack": "tsc",
     "build": "yarn tsc",
-    "lint": "eslint src --ext ts,tsx,js,jsx --cache"
+    "lint": "eslint src --ext ts,tsx,js,jsx --cache",
+    "migrate": "node ./dist/db/migrate.js"
   },
   "dependencies": {
     "@huggingface/inference": "^2.6.4",
     "@textshq/platform-sdk": "file: ~/../../platform-sdk/",
     "ai": "^2.2.26",
+    "better-sqlite3": "^9.4.3",
     "chance": "^1.1.8",
     "date-fns": "^2.29.2",
+    "drizzle-orm": "^0.29.4",
     "eventsource": "^2.0.2",
     "got": "^11.0.0",
     "lodash": "^4.17.21",
@@ -25,12 +28,14 @@
   },
   "devDependencies": {
     "@textshq/eslint-config": "https://github.com/TextsHQ/eslint-config#main",
+    "@types/better-sqlite3": "^7.6.9",
     "@types/chance": "^1.1.3",
     "@types/eslint": "^8.4.10",
     "@types/eventsource": "^1.1.15",
     "@types/lodash": "^4.14.184",
     "@types/node": "^18.7.13",
     "@types/react": "^17.0.43",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.30.0",
     "typescript": "^5.0.2"
   },
